Wed Oct 04 11:43:19 BST 2000 Olly Betts

	* stats.h: Removed unneeded bodge.

	* Fixed two copiler warnings.

Tue Oct 03 18:32:35 BST 2000 Olly Betts

	* Merged LocalMatch into MultiMatch.

Tue Oct 03 17:04:17 BST 2000 Olly Betts

	* Now passes all tests.

Mon Oct 02 18:00:20 BST 2000 Olly Betts

	* Cleaned up a bit.

Mon Oct 02 17:28:53 BST 2000 Olly Betts

	* LocalMatch: Split off postlist tree generation into LocalSubMatch
	  (temporary name).  LocalMatch now just takes a single PostList and
	  forms an MSet from it.  Remote versions not yet implemented.

Thu Sep 28 12:19:25 BST 2000 Olly Betts

	* Major overhaul of matcher including addition of MergePostList and
	  MSetPostList.

	* Use OmDatabase instead of converting it into a MultiDatabase.

	* OmDatabase new methods: get_doccount(), get_avlength(),
	  get_termfreq(), get_doclength(), term_exists().

	* Currently MultiMatch / LocalMatch / NetworkMatch interface is
	  highly bodged.

Wed Sep 27 19:30:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Almost added ability to add an empty document to a quartz database
	  (yay(!)).  Added test for this, too.

Wed Sep 27 19:04:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a regex replace node.

Wed Sep 27 17:12:13 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed bug in timeout code

Wed Sep 27 13:26:47 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed bug in database.cc - only implicit sessions get implicitly
	  ended.

	* Implemented quartztest which opens a new database and adds an empty
	  document to it.

Wed Sep 27 11:52:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Compatibility tweak for older libxml

Tue Sep 26 18:17:38 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added dummy implementation of quartz tables, storing stuff in
	  files and reading it all into memory, pretending its in a tree
	  structure.

Tue Sep 26 18:17:11 BST 2000 Olly Betts
