@@ -15,7 +15,8 @@ noinst_HEADERS = \
  netutils.h netserver.h progserver.h socketclient.h socketserver.h \
  socketcommon.h positionlist.h tcpclient.h \
  tcpserver.h omerr_string.h omdebug.h omlinebuf.h omstringstream.h \
- inmemory_positionlist.h omenquireinternal.h emptypostlist.h
+ inmemory_positionlist.h omenquireinternal.h emptypostlist.h \
+ omdatabaseinterface.h
 
 noinst_LTLIBRARIES = libcommon.la
 
