@@ -1,8 +1,14 @@
+Wed Oct 04 13:15:04 BST 2000 Olly Betts
+
+	* Eliminated internal friends from external headers.
+
+	* Fixed two more compiler warnings.
+ 
 Wed Oct 04 11:43:19 BST 2000 Olly Betts
 
 	* stats.h: Removed unneeded bodge.
 
-	* Fixed two copiler warnings.
+	* Fixed two compiler warnings.
 
 Tue Oct 03 18:32:35 BST 2000 Olly Betts
 
